# PRAC3-CSSE4011

./: .gitignore  README.md
mycode/base/: CMakeLists.txt  README.md  prj.conf
mycode/base/src/: central_gatt_write.c  gatt_write_common.c  main.c  position_sender.c
mycode/inc/: ibeacon_node_manager.h
mycode/lib/: ibeacon_node_manager.c  position_sender.h
mycode/mobile/: CMakeLists.txt  prj.conf
mycode/mobile/src/: main.c
mycode/pc/: docker-compose.yml  kalman_dashboard.json  mock_bluetooth_data.py  real_position_receiver.py  serial_to_influx.py  setup_dashboard.py
mycode/ultrasonic/: CMakeLists.txt  disco_l475_iot1.overlay  nrf52840dk_nrf52840.overlay  prj.conf
mycode/ultrasonic/include/: ultrasonic_ble.h  ultrasonic_sensor.h
mycode/ultrasonic/lib/: ultrasonic_ble.c  ultrasonic_sensor.c
mycode/ultrasonic/src/: main.c
mycode/viewer/: CMakeLists.txt  prj.conf
mycode/viewer/src/: main.c
